--- a/Documentation/yaml_file_template.yml
+++ b/Documentation/yaml_file_template.yml
@@ -30,4 +30,4 @@ jobs:
 
       # Step 4: Run the Python script
       - name: Run Python script
-        run: folder path/to/your_script.py
+        run: modules/file_retrieval.py
