--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,2 +1,32 @@
-name: NSW-Fuel-Price-Insights-Workflow
-on: workflow_dispatch
+name: NSW Fuel Price Incights Workflow
+
+# Trigger manually
+on:
+  workflow_dispatch: # this runs on a manual trigger
+  #schedule: # runs on a schedule using cron
+  #  - cron: "0 8 * * 1"  # every Monday 8:00 UTC
+
+jobs:
+  run-python-script: # This is the name of the job
+    runs-on: ubuntu-latest # Defines operating system - ubuntu-latest is pretty standard
+
+    steps:
+      # Step 1: Check out the repo - this means to gain access to the repo 
+      - name: Check out repository
+        uses: actions/checkout@v3
+
+      # Step 2: Set up Python - this is doing exactly what it says
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      # Step 3: Install dependencies 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Step 4: Run the Python script
+      - name: Run Python script
+        run: modules/file_retrieval.py
