--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,4 +30,6 @@ jobs:
       # Step 4: Run the Python script
       - name: Run Python script
         run: python Modules/file_retrieval.py
+        env:
+          TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB }}
 
