--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-    "latest_file": "empty",
+    "latest_file": "dec2025",
+    "next_file_date": "jan2026",
     "last_run_date": "_20260123_14h57"
 }
