--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "latest_file": "jan2026",
     "next_file_date": "feb2026",
+    "last_transformation": "jan2026",
     "last_run_date": "20260204_10h57"
 }
