--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,4 +35,6 @@ jobs:
         run: python orchestrator.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
+
 
