--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "latest_file": "jan2026",
     "next_file_date": "feb2026",
-    "last_transformation": "jan2026",
+    "last_transformation": "dec2025",
     "last_run_date": "20260215_08h58"
 }
