--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "latest_file": "jan2026",
     "next_file_date": "feb2026",
     "last_transformation": "jan2026",
+    "last_API_call_update": "dec2025",
     "last_run_date": "20260217_22h34",
     "last_API_call": "20260217_22h34"
 }
